@@ -419,10 +419,11 @@ class TestHTTPUtility(object):
 
     def test_cookie_maxsize(self):
         val = http.dump_cookie('foo', ('bar' * 1360) + 'b')
-        assert len(val) == http.COOKIE_MAXSIZE
+        assert len(val) == 4093
 
         with pytest.raises(ValueError) as excinfo:
             http.dump_cookie('foo', ('bar' * 1360) + 'ba')
+
         assert ('Cookie too large' in str(excinfo))
 
 
